# SimpleCmakeProject

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  my_math.cpp  my_math.h
tests/: CMakeLists.txt  test_main.cpp
